# food_truck_locator

./: README.md  docker-compose.yml  heroku.yml  mytestdb  pyproject.toml  requirement.txt  requirements.txt
setup/: settings.py  urls.py
static/: about.css  base.css  carousel.css
staticfiles/: about.1bcd81fe5eb4.css  about.css  base.0c3f43de2da7.css  base.9c8702dadfa5.css  base.afdbb9a98aad.css  base.c65079025b32.css  base.css  carousel.7dd63223857b.css  carousel.a7bb81af79f4.css  staticfiles.json
templates/: _base.html  about.html  activate_account_email.html  activate_account_invalid.html  activate_account_sent.html  all-orders.html  base.html  checkout.html  food-truck.html  index.html  login.html  map.html  map2.html  menu-page.html  navigation-bar.html  order-detail.html  order-menu.html  signup.html  truck-list-view.html  truck-single-view.html
truck/: admin.py  forms.py  models.py  serializers.py  signals.py  tests.py  tokens.py  urls.py  views.py
truck/google_api/: google_api.html  google_api.py  google_gps.py  google_locator 3.py  google_locator.py  google_map_maker.js
truck/ip_stack/: ip_stack.py
truck/location_IQ/: location_IQ.py
truck/migrations/: 0001_initial.py  0002_auto_20210115_0012.py  0003_auto_20210115_0204.py  0004_image_title.py  0005_auto_20210115_0433.py  0006_auto_20210119_1803.py  0007_auto_20210119_2157.py  0008_orderinstance_poster.py  0009_auto_20210121_0525.py  0010_auto_20210121_0618.py  0011_auto_20210121_0619.py  0012_userlocation.py  0013_auto_20210121_1926.py  0014_orderinstance_prepared.py
